--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@react-navigation/native": "^5.0.6",
     "@react-navigation/stack": "^5.0.6",
     "expo": "~36.0.0",
+    "expo-facebook": "^8.0.0",
+    "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
+    "expo-permissions": "~8.0.0",
+    "expo-random": "~8.0.0",
     "firebase": "^7.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
@@ -28,7 +36,8 @@
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
